# adk-gui-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile.mock  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  VIDEO_RECORDING_CHECKLIST.md  VIDEO_RECORDING_IMPLEMENTATION.md  VIDEO_RECORDING_PLAN.md  docker-compose.headed.yml  docker-compose.yml  pyproject.toml  test_video_module.py
gui_agent_v1/: __init__.py  agent.py  cli.py  config.py  observability.py
gui_agent_v1/evals/: basic.evalset.json  complex.evalset.json  simple.evalset.json
gui_agent_v1/prompts/: __init__.py  system.py
mock_sites/: __init__.py  server.py
mock_sites/templates/: complex_form.html  simple_form.html
recordings/: .gitignore  README.md
scripts/: fix_xquartz.sh  run_headed.sh  run_headless.sh  setup_gcp.sh  setup_headed_mode_linux.sh  setup_headed_mode_mac.sh
src/gui_agent/: __init__.py  agent.py  cli.py  config.py  observability.py  video.py
src/gui_agent/prompts/: __init__.py  system.py
tests/: TEST_SUMMARY.md  __init__.py  conftest.py  test_agent.py  test_config.py  test_docker_compose.py  test_headed_mode.py  test_platform_compatibility.py  test_screenshot.py
tests/evalsets/form_filling/: basic.evalset.json
